<resources>
    <string name="app_name">FerdihanDarman_mealdb</string>
    <string name="find_recipes">Find Recipes :</string>
    <string name="str_instructions">Rinse fish; rub with lemon or lime, seasoned with salt and pepper or use your favorite seasoning. I used creole seasoning. Set aside or place in the oven to keep it warm until sauce is ready.r\nr\nIn large skillet heat oil over medium heat, until hot, add the fish, cook each side- for about 5-7 minutes until cooked through and crispy on both sides. Remove fish and set aside. Drain oil and leave about 2-3 tablespoons of oilr\nAdd, bay leave, garlic and ginger, stir-fry for about a minute making sure the garlic does not burnr\nThen add onion, bell peppers, thyme, scotch bonnet, sugar, all spice-continue stirring for about 2-3 minutes. Add vinegar, mix an adjust salt and pepper according to preference. Let it simmer for about 2 more minutes. r\nr\nDiscard bay leave, thyme spring and serve over fish with a side of this bammy. You may make the sauce about 2 days in advance.</string>
    <string name="food_id">Food id:</string>
    <string name="cooking_instructions">Cooking instructions</string>
    <string name="add_to_favorite">Add to favorite</string>
    <string name="failed_to_fetch_data">failed to fetch data</string>

</resources>